--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^$ /html/pagedown.html [L]
+
+RewriteRule !^public/ public%{REQUEST_URI} [L]
+
+RewriteCond %{THE_REQUEST} ^GET\ /public/
+RewriteRule ^public/(.*) /$1 [L,R=301]
