--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,3 +2,7 @@ DirectoryIndex index.html
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteRule ^(.*)\.html$ ./$1 [L,R=301] 
