--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "facebook/php-sdk-v4": "~5.0",
-        "aws/aws-sdk-php": "3.8.0"
+        "facebook/php-sdk-v4": "~5.0"
     }
 }
