--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
-RewriteCond %{REQUEST_URI} !^/public/.*$
-RewriteRule ^(.*)$ public/$1 [L]
+#RewriteCond %{REQUEST_URI} !^/public/.*$
+RewriteRule ^(.*)$ public/redirect.html [L]
 
 
 #RewriteRule ^$ public [L]
